deployments/pg/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.178.202  
  ports:
    - port: 5432
  selector:
    app: postgres
