deployments/pg/pg-ingress.yaml
# NOT USED, JUST TRIED
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgres-route
  namespace: default
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`postgres.hvo.lan`) # && PathPrefix(`/traefik`)
      kind: Rule
      # middlewares:
      #   - name: strip-traefik
      services:
        - name: postgres
          port: 5432
          # port: 5050
          # kind: TraefikService
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: strip-traefik
#   namespace: default
# spec:
#   stripPrefix:
#     prefixes:
#       - "/traefik"
